# Projet5-ML-Deployment-Futurisys

./: .env.example  .gitignore  Dockerfile  README.md  hf_app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-hf-spaces.yml
app/: __init__.py  main.py
app/core/: __init__.py  config.py
app/database/: __init__.py  connection.py  models.py
app/middleware/: prediction_logger.py
app/models/: __init__.py  final_column_names.pkl  ml_model.py  model_info.pkl  onehot_encoder.pkl  ordinal_encoder.pkl  sample_data_for_testing.pkl  schemas.py  trained_model.pkl
app/routers/: __init__.py  analytics.py  data_management.py  health.py  predictions.py
app/utils/: __init__.py
database/documentation/: database_shema_uml.md  setup_guide.md
database/python/: create_db.py  import_dataset.py
database/sql/: create_database.sql
tests/: __init__.py  test_api_endpoints.py  test_integration.py
