[project]
name = "projet5-ml-deployment"
version = "0.1.0"
description = "API de déploiement Machine Learning pour Futurisys - Classification XGBoost avec FastAPI et PostgreSQL"
authors = [
    {name = "MMeknaci", email = "mounir.meknaci@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Dépendances ML héritées EXACTEMENT du Projet4
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (==1.26.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    
    # Nouvelles dépendances pour l'API et déploiement
    "fastapi (>=0.104.1,<0.110.0)",
    "uvicorn[standard] (>=0.24.0,<0.30.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    
    # Base de données
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "alembic (>=1.13.1,<2.0.0)",
    
    # Outils développement et sécurité
    "python-dotenv (>=1.0.0,<2.0.0)",
    "loguru (>=0.7.2,<1.0.0)",
    "joblib (>=1.4.0,<2.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    
    # Tests
    "pytest (>=7.4.3,<8.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-asyncio (>=0.21.1,<1.0.0)",
    "httpx (>=0.25.2,<1.0.0)",
    
    # Code quality
    "black (>=23.11.0,<24.0.0)",
    "flake8 (>=6.1.0,<7.0.0)",
    "isort (>=5.12.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"